added a new plugin
maven-war-plugin, in version 2.6 or lower, expects by default a src/main/webapp/web.xml file to be present in your WAR project, and it didn't find it.
so adding a plugin

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
   </dependencies>
   <build>
     <plugins>
+    <plugin>
+ 	<artifactId>maven-war-plugin</artifactId>
+  	<version>3.0.0</version>
+    </plugin>
+
       <plugin>
 	<groupId>org.codehaus.mojo</groupId>
 	<artifactId>exec-maven-plugin</artifactId>
